Quotes, overflow fix

--- a/src/About/About.css
+++ b/src/About/About.css
@@ -1,12 +1,10 @@
 .about{
-    height: 110vh;
-    width: 92vw;
+    height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
     text-align: center;
     padding: 0 4vw;
-    margin-bottom: 5vh;
 }
 .about h2{
     font-family: 'Raleway';
@@ -34,7 +32,6 @@
 }
 @media only screen and (min-width:800px) {
     .about{
-        width: 94vw;
         height: 100vh;
         padding: 0 0 0 3vw;
         justify-content: flex-start;
