--- a/src/App.css
+++ b/src/App.css
@@ -43,3 +43,9 @@ body{
   overflow-y: scroll;
   scroll-behavior: smooth;
 }
+
+@media only screen and (max-width:800px){
+  .cursor{
+    display: none;
+  }
+}
