--- a/src/navbar/navbar.css
+++ b/src/navbar/navbar.css
@@ -3,7 +3,7 @@
     text-align: center;
     padding: 2rem 0;
     overflow: hidden;
-    height: 20vh;
+    height: 12vh;
     z-index:1;
     background-color: #d9d9d9;
 }
@@ -33,9 +33,9 @@
     .navbar{
         display: flex;
         align-items: center;
-        padding: 1.5rem 1rem 1.5rem 3rem;
+        padding: 1.5rem 1vw 1.5rem 3vw;
         height: 10vh;
-        width:98vw;
+        width:94.5vw;
     }
     .navbar h1{
         width: 30vw;
